MODELINKS-72: test optimized